# apoint-beta

./: .gitignore  .hgignore  Apoint.cabal  debianize.sh  devel.hs
Apoint/: Access.hs  AccessControl.hs  Apoint.cabal  Application.hs  Form.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs  Widget.hs  devel.hs
Apoint/Data/Text/: Extended.hs
Apoint/Form/: Note.hs
Apoint/Handler/: Home.hs  Link.hs  Note.hs  NoteEdit.hs  NoteNew.hs  Notes.hs  Search.hs
Apoint/Local/Data/: Text.hs
Apoint/Local/Yesod/: Auth.hs
Apoint/Model/: Note.hs
Apoint/Prelude/: Extended.hs
Apoint/Settings/: StaticFiles.hs
Apoint/Widget/: Note.hs
Apoint/Widgets/: Note.hs
Apoint/Yesod/Auth/: Extended.hs
Apoint/app/: DevelMain.hs  main.hs
Apoint/config/: keter.yaml  models  postgresql.yml  routes  settings.yml  sqlite.yml
Apoint/deploy/: Procfile
Apoint/templates/: default-layout-wrapper.hamlet  default-layout.hamlet  homepage.hamlet  note.hamlet  noteedit.hamlet  notes.hamlet  noteslist.hamlet  noteslist.julius  notesview.hamlet  noteview.hamlet  workarea.hamlet  workarea.julius
Apoint/tests/: HomeTest.hs  main.hs
config/: models  postgresql.yml  routes  settings.yml
debian/: apoint.install  apoint.postinst  apoint.service  changelog  control  haskell-apoint-utils.install  libghc-apoint-doc.links  rules  watch
deploy/: deploy-digitalocean.hs
nginx/: apoint
src/: Access.hs  Application.hs  Foundation.hs  Model.hs  Settings.hs
src/Form/: Note.hs
src/Handler/: Home.hs  Link.hs  Note.hs  Search.hs
src/Handler/Admin/: User.hs
src/Model/: Note.hs
src/Prelude/: Extended.hs
src/Settings/: StaticFiles.hs
src/Widget/: Note.hs
src/Yesod/Auth/: Extended.hs
static/css/: apoint.css
templates/: default-layout.hamlet  workarea.hamlet
yesod-boilerplate/: devel.hs  yesod-boilerplate.cabal
yesod-boilerplate/config/: keter.yml  mongoDB.yml  postgresql.yml  sqlite.yml
yesod-boilerplate/deploy/: Procfile
