name:              Apoint
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Access
                     Application
                     Foundation
                     Handler.Home
                     Handler.Link
                     Handler.Note
                     Handler.NoteEdit
                     Handler.Search
                     Import
                     Model
                     Model.Note
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Widgets.Note

    other-modules: Local.Data.Text
                   Local.Yesod.Auth

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NamedFieldPuns
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                ScopedTypeVariables
                TemplateHaskell
                TypeFamilies

    build-depends: aeson
                 , base
                 , blaze-html
                 , bytestring
                 , conduit
                 , data-default
                 , directory
                 , fast-logger
                 , hamlet
                 , hjsmin
                 , http-conduit
                 , markdown
                 , mime-mail
                 , monad-control
                 , monad-logger
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , shakespeare
                 , shakespeare-text
                 , template-haskell
                 , text
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static

executable         Apoint
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Apoint
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Apoint
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
