name:              Apoint
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Access
                     Application
                     Form
                     Form.Note
                     Foundation
                     Handler.Home
                     Handler.Link
                     Handler.Note
                     Handler.Search
                     Import
                     Model
                     Model.Note
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Widget
                     Widget.Note

    other-modules: Local.Data.Text
                   Local.Yesod.Auth

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -O0
    else
        ghc-options:   -Wall -Werror -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NamedFieldPuns
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                ScopedTypeVariables
                TemplateHaskell
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-sqlite             >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.8
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1.4      && < 2.2
                 , wai-logger                    >= 2.1        && < 2.2
                 , mime-mail
                 , blaze-html
                 , markdown

executable         Apoint
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Apoint
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Apoint
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
