name:              Apoint
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Access
                     Application
                     Form
                     Form.Note
                     Foundation
                     Handler.Home
                     Handler.Link
                     Handler.Note
                     Handler.Search
                     Model
                     Model.Note
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Widget
                     Widget.Note

    other-modules:  Prelude.Extended
                    Yesod.Auth.Extended

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -O0
    else
        ghc-options:   -Wall -Werror -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                GADTs
                GeneralizedNewtypeDeriving
                MultiParamTypeClasses
                NamedFieldPuns
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                ScopedTypeVariables
                TemplateHaskell
                TypeFamilies

    build-depends: aeson                         >= 0.6        && < 0.8
                 , base                          >= 4          && < 5
                 , blaze-html
                 , blaze-markup                  >= 0.6.1      && < 0.7
                 , bytestring                    >= 0.9        && < 0.11
                 , conduit                       >= 1.0        && < 2.0
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 2.1.4      && < 2.2
                 , hamlet
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , markdown
                 , mime-mail
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-loops                   >= 0.4.2.1    && < 0.5
                 , monad-logger                  >= 0.3        && < 0.4
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-sqlite             >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , shakespeare
                 , shakespeare-i18n              >= 1.0        && < 1.1
                 , shakespeare-text
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , transformers                  >= 0.3        && < 0.4
                 , wai                           >= 3.0.1.1    && < 3.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.1        && < 2.2
                 , warp                          >= 3.0        && < 3.1
                 , path-pieces                   >= 0.1.2      && < 0.2
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-persistent              >= 1.2.3      && < 1.3
                 , yesod-routes                  >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3

executable         Apoint
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Apoint
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Apoint
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
